--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Ciência, Computação, Divulgação, UECE, Universidade, Ceará, Academia">
-    <meta name="description" content="Blog de Divulgação Científica especializado em Ciência da Computação">
+    <meta name="description" content="Science on the Table: Blog de Divulgação Científica especializado em Ciência da Computação">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Marcos Sombra, Bia Vasconcelos">
 
@@ -16,23 +16,50 @@
     <!-- CSS próprio -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
 
-    <title>Blog BETA - Página Inicial</title>
+    <title>Science on the Table - Página Inicial</title>
 </head>
 
-<!-- divisão de tags -- >
+<!-- corpo do site -- >
 <body>
-<!-- divisão de tags -- >
-    <div class="container-fluid">
-        Hello World
-    </div>
+    <!-- menu superior (fixado) -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #007a1f">
+        <!-- marca do blog -->
+        <span class="navbar-brand mb-0 h1">Science on the Table</span>
+        <!-- botão dropdown (para layout responsivo -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- div do menu -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- lista de itens do menu -->
+            <ul class="navbar-nav mr-auto">
+                <li class="navbar-nav mr-auto">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sobre</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contato</a>
+                </li>
+            </ul>
+
+            <!-- form de busca -->
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+            </form>
+        </div>
+    </nav>
+    <!-- fim do menu superior (fixado) -->
 
 
     <!-- JS do jQuery + Popper.js + Bootstrap (CDN) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<!-- divisão de tags -- >
 </body>
-<!-- divisão de tags -- >
 
 </html>
