--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- corpo do site -- >
 <body>
     <!-- menu superior (fixado) -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #007a1f">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #133d06">
         <!-- marca do blog -->
         <span class="navbar-brand mb-0 h1">Science on the Table</span>
         <!-- botão dropdown (para layout responsivo -->
@@ -49,7 +49,7 @@
             <!-- form de busca -->
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="botao-form-pesquisa">Pesquisar</button>
             </form>
         </div>
     </nav>
