Inclusão div de chamada do site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Ciência, Computação, Divulgação, UECE, Universidade, Ceará, Academia">
-    <meta name="description" content="Science on the Table: Blog de Divulgação Científica especializado em Ciência da Computação">
+    <meta name="description" content="The Science is on the Table: Blog de Divulgação Científica especializado em Ciência da Computação">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Marcos Sombra, Bia Vasconcelos">
 
@@ -16,7 +16,7 @@
     <!-- CSS próprio -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
 
-    <title>Science on the Table - Página Inicial</title>
+    <title>The Science is on the Table - Página Inicial</title>
 </head>
 
 <!-- corpo do site -- >
@@ -24,7 +24,7 @@
     <!-- menu superior (fixado) -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #133d06">
         <!-- marca do blog -->
-        <span class="navbar-brand mb-0 h1">Science on the Table</span>
+        <span class="navbar-brand mb-0 h1">The Science is on the Table</span>
         <!-- botão dropdown (para layout responsivo -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,6 +54,17 @@
         </div>
     </nav>
     <!-- fim do menu superior (fixado) -->
+
+
+
+    <!-- inicio div de chamada do site -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">The Science is on the Table</h1>
+            <p class="lead">O maior blog de Ciência da Computação do meu bairro!</p>
+        </div>
+    </div>
+    <!-- inicio div de chamada do site -->
 
 
     <!-- JS do jQuery + Popper.js + Bootstrap (CDN) -->
