--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Ciência, Computação, Divulgação, UECE, Universidade, Ceará, Academia">
-    <meta name="description" content="The Science is on the Table: Blog de Divulgação Científica especializado em Ciência da Computação">
+    <meta name="description" content="The Science's on the Table: Blog de Divulgação Científica especializado em Ciência da Computação">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Marcos Sombra, Bia Vasconcelos">
 
@@ -16,7 +16,7 @@
     <!-- CSS próprio -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
 
-    <title>The Science is on the Table - Página Inicial</title>
+    <title>The Science's on the Table - Página Inicial</title>
 </head>
 
 <!-- corpo do site -- >
@@ -24,7 +24,7 @@
     <!-- menu superior (fixado) -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #133d06">
         <!-- marca do blog -->
-        <span class="navbar-brand mb-0 h1">The Science is on the Table</span>
+        <span class="navbar-brand mb-0 h1">The Science's on the Table</span>
         <!-- botão dropdown (para layout responsivo -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,11 +60,99 @@
     <!-- inicio div de chamada do site -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">The Science is on the Table</h1>
+            <h1 class="display-4">The Science's on the Table</h1>
             <p class="lead">O maior blog de Ciência da Computação do meu bairro!</p>
         </div>
     </div>
-    <!-- inicio div de chamada do site -->
+    <!-- fim div de chamada do site -->
+
+
+    <!-- (new) inicio div de corpo do site -->
+    <div class="jumbotron-fluid">
+        <div class="container">
+            <section class="my-5">
+                <h2 class="h1-responsive font-weight-bold text-center my-5">Últimos Posts</h2>
+
+                <!-- lista de posts -->
+                <!-- post #1 -->
+                <div class="row">
+                    <!-- div da imagem -->
+                    <div class="col-lg-5 col-xl-4">
+                        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
+                            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/2.jpg" alt="Imagem Ilustrativa" title="Imagem Ilustrativa">
+                        </div>
+                    </div>
+                    <!-- fim div da imagem -->
+
+                    <!-- div do texto -->
+                    <div class="col-lg-7 col-xl-8">
+                        <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
+                        <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
+                        <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
+                        <a class="btn btn-success" id="botao-post-completo" role="button">Ver Mais</a>
+                    </div>
+                    <!-- fim div do texto -->
+                </div>
+
+                <hr class="my-5">
+
+                <!-- post #2 -->
+                <div class="row">
+                    <!-- div da imagem -->
+                    <div class="col-lg-5 col-xl-4">
+                        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
+                            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/6.jpg" alt="Imagem Ilustrativa" title="Imagem Ilustrativa">
+                        </div>
+                    </div>
+                    <!-- fim div da imagem -->
+
+                    <!-- div do texto -->
+                    <div class="col-lg-7 col-xl-8">
+                        <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
+                        <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
+                        <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
+                        <a class="btn btn-success" id="botao-post-completo" role="button">Ver Mais</a>
+                    </div>
+                    <!-- fim div do texto -->
+                </div>
+
+                <hr class="my-5">
+
+                <!-- post #3 -->
+                <div class="row">
+                    <!-- div da imagem -->
+                    <div class="col-lg-5 col-xl-4">
+                        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
+                            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/17.jpg" alt="Imagem Ilustrativa" title="Imagem Ilustrativa">
+                        </div>
+                    </div>
+                    <!-- fim div da imagem -->
+
+                    <!-- div do texto -->
+                    <div class="col-lg-7 col-xl-8">
+                        <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
+                        <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
+                        <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
+                        <a class="btn btn-success" id="botao-post-completo" role="button">Ver Mais</a>
+                    </div>
+                    <!-- fim div do texto -->
+                </div>
+
+                <hr class="my-5">
+
+                <!-- fim da lista de posts-->
+            </section>
+        </div>
+    </div>
+    <!-- (new) fim div de corpo do site -->
+
+
+    <!-- rodapé do site -->
+    <footer class="page-footer font-small" id=rodape>
+        <div class="footer-copyright text-center py-3">
+            © 2018 Copyright: The Science is on the Table
+        </div>
+    </footer>
 
 
     <!-- JS do jQuery + Popper.js + Bootstrap (CDN) -->
